--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 07.01.2022 08:36:09</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 07.01.2022 09:13:11</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s grilovanym citronem a dresinkem z celozrnne horcice, bramborovy salat s cervenou repou, krenem, majonezou a creme fraiche 139</li><li>Smazeny filet z cerstveho halibuta, bramborovy salat s cervenou repou, krenem, majonezou a creme fraiche {L} 169</li><li>Medailonky z krutich prsou po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 139</li><li>Spagety s uzenym koroptvim prosciuttem, pak coj, susenymi rajcaty a petrzelkovym pestem {L} 169</li><li>Burrito s pikantnim fazolovym chilli s pecenymi paprikami, chipotle a rajcaty, jasminova ryze, jogurtovy dip, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z lofotske makrely s krenovym jogurtovym dipem, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho candata a ostrozubce s krenovym jogurtovym dipem, zeleninovy bulgur, salatek {L} 175</li><li>Seleci ribsy pecene na pomerancich se spetkou chilli, jasminova ryze, salatek 139</li><li>Bramborove spalicky s kousky zajice peceneho na cernem pive a korenove zelenine, nase kysane zeli s krenem a horcicnym seminkem {L} 169 </li><li>Indicke kvetakove kari s kokosovym mlekem, hraskem a sazenym vajickem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
